fix: Fixed visible focus outline for expandable section headers (#1033)

--- a/src/expandable-section/styles.scss
+++ b/src/expandable-section/styles.scss
@@ -99,6 +99,16 @@
     padding: 0;
   }
 
+  &-button {
+    box-sizing: border-box;
+    display: flex;
+
+    // Header buttons for non-container variants show the focus ring directly
+    @include focus-visible.when-visible {
+      @include styles.focus-highlight(0px);
+    }
+  }
+
   &-container {
     width: 100%;
     // The icon-container style is kept for variant='container' and header
@@ -106,17 +116,21 @@
       margin-top: awsui.$space-expandable-section-icon-offset-top;
     }
 
-    &[data-awsui-focus-visible='true']:focus-within {
+    // stylelint-disable-next-line selector-combinator-disallowed-list
+    body[data-awsui-focus-visible='true'] &:focus-within {
       outline: none;
       text-decoration: none;
       padding: container.$header-focus-visible-padding;
 
       @include styles.form-focus-element(awsui.$border-radius-control-default-focus-ring);
     }
+
+    // Header buttons that sit in a container should not show focus because the parent container has a focus ring already
     &-button {
       box-sizing: border-box;
       display: flex;
-      &:focus {
+
+      @include focus-visible.when-visible {
         outline: none;
         text-decoration: none;
       }
